--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 <body>
     <header>
-        <h1>gargi nigai</h1>
+        <h1>Gargi Nijai</h1>
         <p>AI, Data Science, and Machine Learning Enthusiast committed to driving innovation and delivering impactful solutions.</p>
         <div class="contact-info">
             <ul>
